# credentialsINT

./: .gitignore  LICENSE  README.md  credential_scanner.py  pyproject.toml  test_credential_scanner.py
.github/workflows/: ci.yml
credentialsint.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
